2013-05-20  Adam Sjøgren  <asjo@koldfront.dk>

	* gnus-spec.el (gnus-parse-complex-format): Use unicode escape for left
	double angle quotation mark.

2013-05-19  Adam Sjøgren  <asjo@koldfront.dk>

	* message.el (message-insert-formatted-citation-line): handle finding
	first/lastname when more than 2 names appear.

2013-05-19  Adam Sjøgren  <asjo@koldfront.dk>

	* shr.el (shr-tag-span): New function.

2013-05-18  Glenn Morris  <rgm@gnu.org>

	* message.el (message-mode): Use message-mode-abbrev-table,
	with text-mode-abbrev-table as parent.  (Bug#14413)

2013-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-expand-group): Decode group names.

2013-05-16  Julien Danjou  <julien@danjou.info>

	* gnus-notifications.el (gnus-notifications-notify): Use photo-file as
	app-icon.

2013-05-15  Glenn Morris  <rgm@gnu.org>

	* shr-color.el (shr-color-visible-luminance-min)
	(shr-color-visible-distance-min): Use shr-color group.

2013-05-11  Glenn Morris  <rgm@gnu.org>

	* gnus-vm.el: Make it loadable without VM.
	(gnus-vm-make-folder, gnus-summary-save-in-vm): Require 'vm.
	(vm-forward-message, vm-reply, vm-mail): Remove unused autoloads.

2013-05-09  Glenn Morris  <rgm@gnu.org>

	* mml1991.el: Make it loadable.  (Bug#13456)

	* gnus-art.el (gnus-article-date-headers, gnus-blocked-images):
	* gnus-async.el (gnus-async-post-fetch-function):
	* gnus-gravatar.el (gnus-gravatar-size, gnus-gravatar-properties):
	* gnus-html.el (gnus-html-image-cache-ttl):
	* gnus-notifications.el (gnus-notifications-timeout):
	* gnus-picon.el (gnus-picon-properties):
	* gnus-util.el (gnus-completion-styles):
	* gnus.el (gnus-other-frame-resume-function):
	* message.el (message-user-organization-file)
	(message-cite-reply-position):
	* nnir.el (nnir-summary-line-format)
	(nnir-retrieve-headers-override-function):
	* shr-color.el (shr-color-visible-luminance-min):
	* shr.el (shr-blocked-images):
	* spam-report.el (spam-report-resend-to):