@@ -3,6 +3,10 @@
 	* gnus-spec.el (gnus-parse-complex-format): Use unicode escape for left
 	double angle quotation mark.
 
+2013-05-20  Glenn Morris  <rgm@gnu.org>
+
+	* format-spec.el (format-spec): Allow spec chars with nil.  (Bug#14420)
+
 2013-05-19  Adam Sjøgren  <asjo@koldfront.dk>
 
 	* message.el (message-insert-formatted-citation-line): handle finding
